--- a/_includes/themes/sqlsharper/default.html
+++ b/_includes/themes/sqlsharper/default.html
@@ -8,7 +8,7 @@
     {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
     <meta name="author" content="{{ site.author.name }}">
         <meta name="viewport" content="width=device-width" />
-        <link href="{{ ASSET_PATH }}/css/site.css" rel="stylesheet" type="text/css" />
+        <link href="{{ ASSET_PATH }}/themes/sqlsharper/css/site.css" rel="stylesheet" type="text/css" />
     <script src="/assets/js/jquery-1.7.1.min.js" type="text/javascript"></script>
     </head>
     <body>
