--- a/_includes/themes/cnsharp/default.html
+++ b/_includes/themes/cnsharp/default.html
@@ -10,7 +10,7 @@
     <meta name="description" content="{{ page.description }}">{% endif %}
     <meta name="author" content="{{ site.author.name }}">
     <meta name="viewport" content="width=device-width" />
-    <link href="{{ ASSET_PATH }}sqlsharper/css/site.css" rel="stylesheet" type="text/css" />
+    <link href="{{ ASSET_PATH }}cnsharp/css/site.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <script src="/assets/js/jquery-1.7.1.min.js" type="text/javascript"></script>
 </head>
